more flex edits

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="tabs">
       <a class="tab" href="https://soheekiim.github.io/the_initiative/">HOME</a>
       <a class="tab" id="active" href="#">AWARENESS</a>
-      <a class="tab" href="https://soheekiim.github.io/theinitiative2/">ACCOUNTABILITY</a>
+      <a class="tab" href="https://soheekiim.github.io/the_initiative2/">ACCOUNTABILITY</a>
       </div>
 
     </div>
